test: add a fixture to run regression tests
TODO:

  * Add a unit test for run-regression-test.

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,7 @@
 /doc/po/*/
 /.yardoc/
 /test/.test-result/
+/test/fixtures/run-regression-test/db.old/
+/test/fixtures/run-regression-test/db.new/
+/test/fixtures/run-regression-test/results/
 /Gemfile.lock
