--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 notifications:
-  recipients:
-    - groonga-commit@lists.sourceforge.jp
+  email:
+    recipients:
+      - groonga-commit@lists.osdn.me
 rvm:
   - 2.2
   - 2.3
-  - 2.4.2
+  - 2.4.3
+  - 2.5.0
 before_install:
   - gem update bundler
