--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,7 @@ rvm:
   - 2.6
 before_install:
   - gem update bundler
+  - curl --silent --location
+     https://raw.githubusercontent.com/groonga/groonga/master/data/travis/setup.sh |
+      sh
+
