ci: Use `ruby/setup-ruby`

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
           sudo -H add-apt-repository -y ppa:groonga/ppa
           sudo -H apt update
           sudo -H apt install -y -V groonga-bin
-      - uses: actions/setup-ruby@v1
+      - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby-version }}
       - name: Install dependencies to build gems
