--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,8 @@ jobs:
       - uses: actions/checkout@v6
       - name: Set up Groonga APT repository
         run: |
-          sudo -H add-apt-repository -y ppa:groonga/ppa
+          wget https://packages.groonga.org/ubuntu/groonga-apt-source-latest-$(lsb_release --codename --short).deb
+          sudo -H apt install -y -V ./groonga-apt-source-latest-$(lsb_release --codename --short).deb
           sudo -H apt update
           sudo -H apt install -y -V groonga-bin
       - uses: ruby/setup-ruby@v1
